@@ -29,6 +29,11 @@ static void print_ieee8023(FILE* dst, const struct llc_pdu_sn* llc){
 }
 
 void print_eth(FILE* dst, const struct cap_header* cp, const struct ethhdr* eth, unsigned int flags){
+	if ( cp->caplen < sizeof(struct ethhdr) ){
+		fprintf(dst, " [Packet size limited during capture]");
+		return;
+	}
+
 	const void* payload = ((const char*)eth) + sizeof(struct ethhdr);
 	uint16_t h_proto = ntohs(eth->h_proto);
 	uint16_t vlan_tci;
